CREATE TABLE IF NOT EXISTS kategori_instansi (
    id_kategori_instansi BIGINT PRIMARY KEY,
    kategori_instansi VARCHAR(255)
);

