CREATE TABLE IF NOT EXISTS jenis_instansi (
    id_jenis_instansi SERIAL PRIMARY KEY,
    jenis_instansi VARCHAR(255)
);

