CREATE TABLE IF NOT EXISTS wilayah_kerja (
    id_wilayah BIGINT PRIMARY KEY,
    nama_wilayah VARCHAR(255)
);

