CREATE TABLE IF NOT EXISTS pokja (
    id_pokja BIGINT PRIMARY KEY,
    nama_pokja VARCHAR(255)
);

