CREATE TABLE IF NOT EXISTS nomenklatur (
    id_nomenklatur BIGINT PRIMARY KEY,
    nama_nomenklatur VARCHAR(255)
);

