CREATE TABLE IF NOT EXISTS jenjang (
    id_jenjang BIGINT PRIMARY KEY,
    jenjang VARCHAR(255)
);

