CREATE TABLE IF NOT EXISTS asn (
    id_asn BIGINT PRIMARY KEY,
    jenis_asn VARCHAR(255)
);

